...
            <Stack.Screen
              name="saved/index"
              options={{ title: 'Shortlist', headerBackTitle: 'Back' }}
            />
            <Stack.Screen
              name="grievances/index"
              options={{ title: 'Grievances', headerBackTitle: 'Back' }}
            />
            <Stack.Screen
              name="manage/societies/index"
              options={{ title: 'Manage Societies', headerBackTitle: 'Back' }}
            />
            <Stack.Screen
...
